update to refs and add templeton logo

--- a/thanks/index.html
+++ b/thanks/index.html
@@ -58,13 +58,12 @@
     <div class="page-header">
 		<h2>Acknowledgements</h2>
 	</div>
-    <blockquote>
 	<p>The development of the FCMA Toolbox at the PNI would not be possible without help from these organizations:</p>
 	<br>
 	<img src="Intel_Labs.png" alt="Intel Labs logo" width=320 height=320>
-	<img src="fusionio-logo.png" alt="FusionIO logo" width=320 height=320>
+	<img src="fusionio-logo.png" alt="FusionIO logo" width=320 height=240> 
 	<img src="nsf-logo.jpg" alt="NSF logo" width=320 height=320>
-    </blockquote>
+	<img src="templeton-logo.jpg" alt="John Templeton Foundation logo" width=480 height=320 >
 </div>
 </body>
 </html>
