--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 			<a name="refs"></a>
 			<h3>References</h3>
 			<ul>
+				<li>Wang, Y., Cohen, J. D., Li, K., & Turk-Browne, N. B. (submitted). <em>Full correlation matrix analysis (FCMA): A high-performance toolbox and case study for unbiased functional connectivity in human brain imaging.</em></li>
 				<li>Wang, Y., Li, K., Charikar, M., Cohen, J. D., & Turk-Browne, N. B. (May, 2013). <a href="http://www.journalofvision.org/content/13/9/493.short">What you find depends on how you look: Category selectivity in frontal cortex revealed by whole-brain correlation analysis.</a>. Poster presented at Vision Sciences Society, Naples, FL.</li>
 				<li>Turk-Browne, N. B., Li, K., Charikar, M., Cohen, J. D., & Singer, B.D. (2010). <a href="http://qed.princeton.edu/main/The_Correlation_Project/Pyne_Fund_Proposal">Computing and Mining the Full Correlation Matrix of Human Brain Imaging (fMRI) Datasets</a>. J. Insley Blair Pyne Fund Proposal (funded)
 		</div>
