use primary templeton logo and right-align

--- a/thanks/index.html
+++ b/thanks/index.html
@@ -63,7 +63,7 @@
 	<img src="Intel_Labs.png" alt="Intel Labs logo" width=320 height=320>
 	<img src="fusionio-logo.png" alt="FusionIO logo" width=320 height=240> 
 	<img src="nsf-logo.jpg" alt="NSF logo" width=320 height=320>
-	<img src="templeton-logo.jpg" alt="John Templeton Foundation logo" width=480 height=320 >
+	<img src="templeton-logo.jpg" alt="John Templeton Foundation logo" width=480 height=320 align=right>
 </div>
 </body>
 </html>
