--- a/thanks/index.html
+++ b/thanks/index.html
@@ -60,10 +60,11 @@
 	</div>
 	<p>The development of the FCMA Toolbox at the PNI would not be possible without help from these organizations:</p>
 	<br>
-	<img src="Intel_Labs.png" alt="Intel Labs logo" width=320 height=320>
+	<img src="Intel_Labs.png" alt="Intel Labs logo" width=240 height=240>
 	<img src="fusionio-logo.png" alt="FusionIO logo" width=320 height=240> 
-	<img src="nsf-logo.jpg" alt="NSF logo" width=320 height=320>
-	<img src="templeton-logo.jpg" alt="John Templeton Foundation logo" width=480 height=320 align=right>
+	<img src="nsf-logo.png" alt="NSF logo" width=320 height=320>
+<br><br><br>
+	<img src="templeton-logo.png" alt="John Templeton Foundation logo" width=600 height=380>
 </div>
 </body>
 </html>
