--- a/thanks/index.html
+++ b/thanks/index.html
@@ -65,6 +65,10 @@
 	<img src="nsf-logo.png" alt="NSF logo" width=320 height=320>
 <br><br><br>
 	<img src="templeton-logo.png" alt="John Templeton Foundation logo" width=600 height=380>
+<br><br><br>
+<blockquote>
+This project is a collaboration between Psychology and Computer Science faculty and staff belonging to the  <a href="http://www.pni.princeton.edu/">Princeton Neuroscience Institute</a>, and several organizations providing significant support. Funding for FCMA toolbox development is provided in part by the <a href="www.templeton.org">John Templeton Foundation</a>. Equipment for a high-performance computing cluster is funded by the <a href="http://nsf.gov">National Science Foundation</a>. A donation of 100 Xeon Phi and Xeon Sandybridge processors from <a href="http://intel.com">Intel</a> acted as matching funds and helped secure the NSF funding. The Xeon Phis themselves will provide an exciting new platform with thousands of cores, and allow the FCMA toolbox to greatly expand its scope in 2014. <a href="http://www.fusionio.com">Fusion-IO</a> is also participating in this expansion, by providing best-of-class high speed flash memory at cost. Flash will be vital for storing the Full Correlation Matrix in a large fast local cache spanning worker nodes.
+</blockquote>
 </div>
 </body>
 </html>
