updates and tutorial (tba) replaces demo

--- a/cluster/index.html
+++ b/cluster/index.html
@@ -46,7 +46,8 @@
                     <li><a href="../#using">Using</a></li>
                     <li><a href="../config">FCMA File</a>
                    	<li class="active"><a href="../cluster">Cluster</a></li>
-                   	<li><a href="../demo">Demo</a></li>
+			<li><a href="../tutorial">Tutorial</a></li>
+<!--                   	<li><a href="http://rondo.pni.princeton.edu/fcma/demo">Demo</a></li> -->
 										<li><a href="http://github.com/princetonuniversity/fcma-toolbox">Source</a></li>
 										<li><a href="../thanks">Thanks</a></li>
                 </ul>
