--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <!--
 /*
- * Full Correlation Matrix Analysis (FCMA) demo
+ * Full Correlation Matrix Analysis (FCMA) Tutorial
  *   Ben Singer <bdsinger@princeton.edu>
  * 
  * based on jQuery Uploader by Sebastian Tschan
@@ -44,32 +44,26 @@
             <div class="nav-collapse">
                 <ul class="nav">
                     <li><a href="../#using">Using</a></li>
-                    <li><a href="../config">FCMA File</a></li>
-                    <li><a href="../cluster">Cluster</a></li>
-		    <li><a href="../tutorial">Tutorial</a></li>
-<!--                    <li><a href="http://rondo.pni.princeton.edu/fcma/demo">Demo</a></li> -->
-		   							<li><a href="http://github.com/princetonuniversity/fcma-toolbox">Source</a></li>
-		    						<li class="active"><a href="../thanks">Thanks</a></li>
+                    <li><a href="../config">FCMA File</a>
+                   	<li><a href="../cluster">Cluster</a></li>
+			<li class="active"><a href="../tutorial">Tutorial</a></li>
+<!--                   	<li><a href="http://rondo.pni.princeton.edu/fcma/demo">Demo</a></li> -->
+										<li><a href="http://github.com/princetonuniversity/fcma-toolbox">Source</a></li>
+										<li><a href="../thanks">Thanks</a></li>
                 </ul>
             </div>
         </div>
     </div>
 </div>
 <div class="container">
-    <div class="page-header">
-		<h2>Acknowledgements</h2>
-	</div>
-	<p>The development of the FCMA Toolbox at the PNI would not be possible without help from these organizations:</p>
-	<br>
-	<img src="Intel_Labs.png" alt="Intel Labs logo" width=240 height=240>
-	<img src="fusionio-logo.png" alt="FusionIO logo" width=320 height=240> 
-	<img src="nsf-logo.png" alt="NSF logo" width=320 height=320>
-<br><br><br>
-	<img src="templeton-logo.png" alt="John Templeton Foundation logo" width=600 height=380>
-<br><br><br>
-<blockquote>
-This project is a collaboration between Psychology and Computer Science faculty and staff belonging to the  <a href="http://www.pni.princeton.edu/">Princeton Neuroscience Institute</a>, and several organizations providing significant support. Funding for FCMA toolbox development is provided in part by the <a href="www.templeton.org">John Templeton Foundation</a>. Equipment for a high-performance computing cluster is funded by the <a href="http://nsf.gov">National Science Foundation</a>. A donation of 100 Xeon Phi and Xeon Sandybridge processors from <a href="http://intel.com">Intel</a> acted as matching funds and helped secure the NSF funding. The Xeon Phis themselves will provide an exciting new platform with thousands of cores, and allow the FCMA toolbox to greatly expand its scope in 2014. <a href="http://www.fusionio.com">Fusion-IO</a> is also participating in this expansion, by providing best-of-class high speed flash memory at cost. Flash will be vital for storing the Full Correlation Matrix in a large fast local cache spanning worker nodes.
-</blockquote>
+<div class="page-header">
+    <h2>FCMA Toolbox Tutorial</h2>
+</div>
+
+
+The tutorial will be posted here shortly.
+
+
 </div>
 </body>
 </html>
