--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 						<li class="active"><a href="#using">Using</a></li>
 						<li><a href="config">FCMA File</a>
 						<li><a href="cluster">Cluster</a></li>
-						<li><a href="demo">Demo</a></li>
+						<li><a href="tutorial">Tutorial</a></li>
+<!--						<li><a href="http://rondo.pni.princeton.edu/fcma/demo">Demo</a></li> -->
 						<li><a href="http://github.com/princetonuniversity/fcma-toolbox">Source</a></li>
 						<li><a href="thanks">Thanks</a></li>
 					</ul>
@@ -53,8 +54,8 @@
 		</div>
 		<blockquote>
 			<p>The Princeton Full Correlation Matrix Analysis (FCMA) Toolbox is a suite of tools for correlating, analyzing, and classifying patterns of correlation in fMRI time-series data.</p><br>
-			<p>The key data structure in FCMA is the Full Correlation Matrix (FCM), which contains the correlations between all pairs of voxels and time-intervals. Computing the entire FCM is intractable: the FCM for two one-hour fMRI sessions requires approx. 1.5 x 10<sup>19</sup> correlations, nearly 20 years of compute time on a 4000-core computer cluster. The FCMA Toolbox correlates a given set of fixed time-intervals (blocks of TRs you specify) which together with some custom optimizations reduces the computational load to a matter of hours. A modest-sized cluster is still required to do the calculation. For that reason, a new toolbox was developed in the spirit of the Princeton <a href="http://code.google.com/p/princeton-mvpa-toolbox/">MVPA Toolbox</a> for Matlab, but is written in C++, OpenMP, and OpenMPI for greater performance and scalability.</p><br>
-			<p>Here are the steps for running an FCMA analysis from a user perspective, including how to create an .fcma config file, without discussing the config settings in detail. Please follow the FCMA Tutorial (link TBA) for a discussion in the context of a real analysis. As far as how to install FCMA and set up a machine or cluster of machines, system administrators should consult the <a href="cluster">cluster</a> page.</p><br>
+			<p>The key data structure in FCMA is the Full Correlation Matrix (FCM), which contains the correlations between all pairs of voxels and time-intervals. Computing the entire FCM is intractable: the FCM for two one-hour fMRI sessions requires approx. 1.5 x 10<sup>19</sup> correlations, nearly 20 years of compute time on a 4000-core computer cluster. The FCMA Toolbox correlates a given set of fixed time-intervals (blocks of TRs you specify) which together with some custom optimizations reduces the computational load to a matter of hours. A modest-sized cluster is still required to do unbiased calculations-- ones that use a wholebrain mask initially rather than depending on a preselected ROI based on activation (such as a GLM or an ANOVA). This is due to the ~40k voxels that will undergo autocorrelation and classification.<br><br>
+			<p>Here are the steps for running an FCMA analysis from a user perspective, including how to create an .fcma config file, without discussing the config settings in detail. Please see the <a href="config">config file and reference</a> page for that, and the <a href="tutorial">FCMA Tutorial</a> for a discussion in the context of a real analysis. As far as how to install FCMA and set up a machine or cluster of machines, system administrators should consult the <a href="cluster">cluster</a> page.</p><br>
 		</blockquote>
 		<div class="well">
 			<a name="using"></a>
@@ -121,7 +122,6 @@
 			<h3>Notes</h3>
 			<ul>
 				<li>Code by <a href="http://www.cs.princeton.edu/~yidawang/">Yida Wang</a> and <a href="http://princeton.edu/~bdsinger/">Ben Singer</a>, as part of research being carried out at the <a href="http://www.pni.princeton.edu/">Princeton Neuroscience Institute</a> in the <a href="http://www.princeton.edu/ntblab/">Turk-Browne</a>, <a href="http://www.cs.princeton.edu/~li/">Li</a>, and <a href="http://www.pni.princeton.edu/ncc/">Cohen</a> labs.</li>
-				<li>Some background on the computational challenge of this project are provided by web pages that predate this one: <a href="http://qed.princeton.edu/main/The_Correlation_Project/Pyne_Fund_Proposal">Pyne Fund</a> proposal from 2010, and <a href="http://fullcorr.wikidot.com">fullcorr wiki</a>
 			</ul>
 		</div>
 		<br>
@@ -129,7 +129,7 @@
 			<a name="refs"></a>
 			<h3>References</h3>
 			<ul>
-				<li>Wang, Y., Cohen, J. D., Li, K., & Turk-Browne, N. B. (submitted). <em>Full correlation matrix analysis (FCMA): A high-performance toolbox and case study for unbiased functional connectivity in human brain imaging.</em></li>
+				<li>Wang, Y., Cohen, J. D., Li, K., & Turk-Browne, N. B. (submitted). Full correlation matrix analysis (FCMA): A high-performance toolbox and case study for unbiased functional connectivity in human brain imaging.</li>
 				<li>Wang, Y., Li, K., Charikar, M., Cohen, J. D., & Turk-Browne, N. B. (May, 2013). <a href="http://www.journalofvision.org/content/13/9/493.short">What you find depends on how you look: Category selectivity in frontal cortex revealed by whole-brain correlation analysis.</a>. Poster presented at Vision Sciences Society, Naples, FL.</li>
 				<li>Turk-Browne, N. B., Li, K., Charikar, M., Cohen, J. D., & Singer, B.D. (2010). <a href="http://qed.princeton.edu/main/The_Correlation_Project/Pyne_Fund_Proposal">Computing and Mining the Full Correlation Matrix of Human Brain Imaging (fMRI) Datasets</a>. J. Insley Blair Pyne Fund Proposal (funded)
 		</div>
