--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<br>
 							<li><a href="template_minimal.fcma">Leave-one-subject-out Minimal Template: Selection</a></li>
 							<br>
-							<li><a href="template_minimal_testing.fcma">Leave-on-subject-out Minimal Template: Testing</a></li>
+							<li><a href="template_minimal_testing.fcma">Leave-one-subject-out Minimal Template: Testing</a></li>
 							<br>
 							<br>
 							<br>
