--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -63,7 +63,7 @@ This tutorial goes through a leave-one-subject-out analysis using FCMA. In the i
 <br><br>
 <h4>Downloads</h4>
 <ul>
-<li><strong>Sample data and scripts</strong>: <a href="http://www.pni.princeton.edu/fcma_tutorial.zip">fcma_tutorial.zip</a> [~330MB] contains the materials that will be used in the tutorial.
+<li><strong>Sample data and scripts</strong>: <a href="http://webapps.pni.princeton.edu/fcma_tutorial.zip">fcma_tutorial.zip</a> [~330MB] contains the materials that will be used in the tutorial.
 <br>
 The sample data is a preprocessed form of the original <a href="http://dx.doi.org/10.1126/science.1063736">Haxby et al (2001)</a> 8-category study <a href="http://data.pymvpa.org/datasets/haxby2001/">data</a>-- down-sampled to 4mm cubed voxels, motion-corrected and detrended, and aligned to the MNI standard brain.</li>
 <br>
